--- a/app/components/app/Application.html
+++ b/app/components/app/Application.html
@@ -1,6 +1,12 @@
+<h2>Thriving kids in NYC neighborhoods</h2>
+<p>
+Based on a multivariate statistical model, we can create a holistic overview of how well children and youth are thriving based on indicators from the education, health and safety domains. ( Factors that are used include important child and youth outcomes such as rate of youth homelessness, infant mortality rate, school aged children attending school and children hospitalized for asthma.    ) The first map shows how high the level of thriving is for each community district.  Source: data2go.nyc (please insert as a hyperlink)
+</p>
 <div id="mapchart" class="mapchart">
-
 </div>
+<p>
+Ranking the communities by performance.
+The chart shows where children and youth are doing better than expected or worst than expected based on the results of the model compared to the actual socio-demographic profile of the neighborhood. This performance measure is derived by calculating the difference between the predicted likelihood of the community district’s level of performance and the empirically estimated community district’s performance.   Source: data2go.nyc (please insert as a hyperlink)
+</p>
 <div id="barchart" class="barchart">
-
 </div>
